issue 29: Update reset.
After looking at some slides…

--- a/jslint4java-docs/src/main/resources/jslint4java.css
+++ b/jslint4java-docs/src/main/resources/jslint4java.css
@@ -17,19 +17,26 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	padding: 0;
 	border: 0;
 	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
 	font-size: 100%;
+	font-family: inherit;
 	vertical-align: baseline;
 	background: transparent;
 }
+
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
@@ -37,19 +44,23 @@ q:before, q:after {
 }
 
 /* remember to define focus styles! */
+
 :focus {
 	outline: 0;
 }
 
 /* remember to highlight inserts somehow! */
+
 ins {
 	text-decoration: none;
 }
+
 del {
 	text-decoration: line-through;
 }
 
 /* tables still need 'cellspacing="0"' in the markup */
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
